--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -38,6 +38,7 @@
 \usepackage[babel]{csquotes}
 \usepackage{hyperref}
 \usepackage{minted}
+\usepackage[htt]{hyphenat}
 \usepackage[backend=biber,bibencoding=ascii]{biblatex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -116,6 +117,7 @@ mycroft,%
 skills,%
 fallback,%
 informations,%
+applicabilita,%
 app_a,%
 }
 
@@ -248,6 +250,7 @@ Abstract della tesi
 \include{skills}
 \include{fallback}
 \include{informations}
+\include{applicabilita}
 
 \appendix
 % INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
