Conclusioni are done! Gotta add some biblio and images

--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -43,3 +43,10 @@
     title = {Digital triage changes the game for UK GP practices in the age of COVID-19},
     url = {https://www.mobihealthnews.com/news/europe/digital-triage-changes-game-uk-gp-practices-age-covid-19}
 }
+@article{article:tagli-ospedali,
+    author = {Agenzia Giornalistica Italia},
+    year = {2020},
+    month = {03},
+    title = {La riduzione di ospedali e posti letto negli ultimi 10 anni},
+    url = {https://www.agi.it/fact-checking/news/2020-03-14/coronavirus-rianimazione-posti-letto-7500889/}
+}
