--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -118,7 +118,7 @@ skills,%
 fallback,%
 informations,%
 applicabilita,%
-app_a,%
+conclusioni,%
 }
 
 % FILE DI BIBLIOGRAFIA
@@ -251,10 +251,7 @@ Abstract della tesi
 \include{fallback}
 \include{informations}
 \include{applicabilita}
-
-\appendix
-% INCLUSIONE APPENDICI - - PERSONALIZZARE - TENERE COERENTE CON LISTA IN ALTO
-\include{app_a}
+\include{conclusioni}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
