Added conclusioni, abstract, ringraziamenti

--- a/LaTeXi/conclusioni.tex
+++ b/LaTeXi/conclusioni.tex
@@ -1,12 +1,13 @@
 \chapter{Conclusioni}
 \label{chap:conclusioni}
 La pandemia globale sviluppatasi nel corso dell'anno 2020 ha messo in luce come gli ospedali, negli ultimi anni, siano stati man mano dimenticati dalla politica e dai budget. Il più recente rapporto sullo stato del SSN,\textit{Annuario Statistico del Servizio Sanitario Nazionale}, è stato pubblicato a settembre 2019 e contiene dati riferiti al 2017.
-Tra il 1998 e il 2017, il numero degli istituti di cura è diminuito di circa 400 unità su 1400. Il numero di posti letto, passato da 311 mila a 191 mila. La spesa pubblica per la sanità, è però costantemente aumentata, pasando da meno di 60 miliardi di euro, a più di 112. \cite{article:tagli-ospedali} Pare ovvia la necessità di una riforma del servizio sanitario pubblico, e la tecnologia potrebbe, in questa, assumere un ruolo chiave. L'utilizzo di strumenti informatici allo stato dell'arte in ambito ospedaliero ridurrebbe le spese, migliorerebbe le performance, e permetterebbe di curare più pazienti, in modo migliore.
+Tra il 1998 e il 2017, il numero degli istituti di cura è \textbf{diminuito di circa 400 unità su 1400}. Il numero di posti letto, passato \textbf{da 311 mila a 191 mila.} La spesa pubblica per la sanità, è però costantemente aumentata, pasando da meno di 60 miliardi di euro, a più di 112. \cite{article:tagli-ospedali} Pare ovvia la necessità di una riforma del servizio sanitario pubblico, e la tecnologia potrebbe, in questa, assumere un ruolo chiave. L'utilizzo di strumenti informatici allo stato dell'arte in ambito ospedaliero ridurrebbe le spese, migliorerebbe le performance, e permetterebbe di curare più pazienti, in modo migliore.
 Spesso la popolazione guarda verso la tecnologia con malfidenza: per questo, la necessità è rendere questo passaggio il più impercettibile ed \textit{umano} possibile. Strumenti come gli assistenti vocali, le app mobili, la realtà aumentata possono contribuire ad appiattire il \textit{digital divide}, rendendo i servizi fruibili anche alle fasce d'età più restie a questi avanzamenti della società, spesso le più frequenti utilizzatrici dei servizi sanitari.
+La barriera abbattuta non sarebbe solo quella generazionale, ma \textbf{anche quella linguistica}: strumenti come questo permetterebbero anche a chi non conosce bene l'italiano di interagire nella propria lingua madre e riuscire a capire e farsi capire.
 La ridotta complessità di questo progetto è la prova che spesso le migliorie necessarie sono ben più vicine di quanto sembrino.
-Il lavoro è \textit{diviso} in due parti: una basata sulle reti neurali di Padatious, allenate con alcune frasi per sintomo, ed una basata sulla libreria fastai, allenata con un dataset apposito. Ognuna delle due ha, senz'altro, possibilità di evoluzione: il miglior risultato si otterrebbe accorpandole ed affidandosi totalmente ad un classificatore esterno a Mycroft. Questo richiederebbe però un dataset di training molto più completo e numeroso, e per questo la decisione di affidarsi a \textbf{due livelli} di skills si è rivelata la più affidabile. Ciò non toglie che, con lo sviluppo di nuovi dataset nel futuro, sarà un giorno possibile definire un progetto come questo ancora più semplicemente.
-Inoltre, la possibilità di installare questo assistente vocale su dispositivi a basso costo piuttosto che appositi totem high-end, rende abbordabile il passaggio ad un pre-triage automatizzato a quasi tutti gli ospedali e cliniche italiani.
-Tutto il codice scritto per la tesi è open source con licenza GPL-3.0. Il codice stesso del documento \LaTeX di questa tesi è open source.
+Il lavoro è \textit{diviso} in due parti: una basata sulle reti neurali di \textbf{Padatious}, allenate con alcune frasi per sintomo, ed una basata su un classificatore testuale, allenato con un dataset apposito. Ognuna delle due ha, senz'altro, possibilità di evoluzione: il miglior risultato si otterrebbe accorpandole ed affidandosi totalmente ad un classificatore esterno a Mycroft. Questo richiederebbe però un dataset di training \textbf{molto più completo e numeroso}, e per questo la decisione di affidarsi a \textbf{due livelli} di skills si è rivelata la più affidabile. Ciò non toglie che, con lo sviluppo di nuovi dataset nel futuro, sarà un giorno possibile definire un progetto come questo ancora più semplicemente.
+Inoltre, la possibilità di installare questo assistente vocale su dispositivi a \textbf{basso costo} piuttosto che appositi totem high-end, rende abbordabile il passaggio ad un pre-triage automatizzato a quasi tutti gli ospedali e cliniche italiani.
+Tutto il codice scritto per la tesi è \textbf{open source con licenza GPL-3.0}. Il codice stesso del documento \LaTeX di questa tesi è open source.
 Questo permette l'analisi, da parte di chiunque, del codice per il riscontro di bugs e problemi. Ne permette l'espansione, l'utilizzo gratuito, la sperimentazione da parte dei programmatori e degli ospedali. Infine, è corretto e necessario:
 \begin{center}
     la libertà, delle persone come del software, è \textbf{l'unica via per il progresso.}
