--- a/LaTeXi/tesi.tex
+++ b/LaTeXi/tesi.tex
@@ -174,7 +174,7 @@ conclusioni,%
 \logosede{images/logo}
 
 % DATA - MESE ANNO
-\sedutadilaurea{Probabilmente 2020}
+\sedutadilaurea{09 luglio 2020}
 
 \frontespizio
 
@@ -193,7 +193,10 @@ conclusioni,%
 \vspace*{\stretch{1}}
 \begin{flushright}
   \noindent
-  Dedica toccante.
+  A tutti i professori che nel passato sono riusciti a mantenere viva la fiamma della mia curiosità, nonostante mille venti vi soffiassero sopra.\\
+  \vspace{10px}
+
+  \footnotesize{prof. Serventi, prof. Vescovi, prof. Melegari, prof. Mori, prof. Franchi, prof. Forni, prof. De Martino\dots}
 \end{flushright}
 \vspace*{\stretch{6}}
 \cleardoublepage
@@ -202,12 +205,15 @@ conclusioni,%
 % CITAZIONE - PERSONALIZZARE
 % VSPACE - PROPORZIONE USATA PER CENTRATURA VERTICALE DEL TESTO
 % FLUSHRIGHT - ALLINEAMENTO ORIZZONTALE A DESTRA
+% Only wimps use tape backup: real men just upload their important stuff on ftp, and let the rest of the world mirror it ;) Linus Torvalds
+% The ability to interact with a computer presence like you would a human assistant is becoming increasingly feasible.
+%Vint Cerf, a "father of the internet," in "Your Life: Vinton Cerf" interview by David Frank in AARP Bulletin (December 2016, Vol. 57, No. 10, p. 30.)
+
 \vspace*{\stretch{1}}
 \begin{flushright}
   \noindent
-  Citatemi dicendo che sono stato citato male.
-
-  \textit{Groucho Marx}
+  A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.\\
+  \small{\textit{Alan Turing}}
 \end{flushright}
 \vspace*{\stretch{6}}
 \cleardoublepage
@@ -216,13 +222,21 @@ conclusioni,%
 
 % RINGRAZIAMENTI - PERSONALIZZARE
 \ringraziamenti
-Grazie
-
+È anzitutto dovuto un enorme ringraziamento ai relatori di questa tesi, la prof.ssa \textbf{Mordonini}, il prof. \textbf{Tomaiuolo}, ed il prof. \textbf{Angiani}. Dal partorire l'idea, alla scelta degli strumenti più adatti, al suggerimento di nuove feature, questi professori hanno supportato questo viaggio in ogni modo possibile, dandomi la possibilità di confrontarmi con temi che, un giorno, spero diventino il mio lavoro. Riconosco di essere una persona a volte troppo testarda e ostinata. Questo non mi è mai stato fatto pesare ed è anzi stato assecondato. Un sentito grazie va anche a \textbf{Gianfranco Lombardo}, dottorando del laboratorio Sowide, che mi ha dato ottimi spunti per migliorare il funzionamento del progetto, senza i quali non esisterebbe il capitolo 5 di questa tesi. \\
+Vorrei ringraziare \textbf{mio fratello Nico}, da anni la mia \textit{stella polare} nel mondo dell'informatica, cui sottopongo idee a qualsiasi ora del giorno e della notte e che ha sempre un consiglio, un'opinione, una soluzione che la svoltano.\\
+Grazie a \textbf{mia madre Rossella}, che è sempre stata comprensiva, mi ha supportato anche quando le mie scelte non le piacevano, ha dovuto per anni ascoltare i discorsi di tre noiosi informatici ad ogni pasto.
+Grazie a \textbf{mio padre Fabrizio}, che mi ha insegnato a non accontentarmi mai, di nulla. Che mi ha cresciuto con il mantra del "se fai qualcosa, fallo come si deve". Che, mentre frequentavo le scuole elementari, mi regalò "Il mio primo libro di BASIC". Spero di diventare un decimo dell'uomo che sei tu.\\
+Infine, un grande ringraziamento ai miei compagni di corso \textbf{Caterina, Daniele, Guido, Mattia, Pietro, Riccardo}. Avete reso questi tre anni un po' più facili, soprattutto per uno come me che a lezione proprio non ci sa stare.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ABSTRACT - PERSONALIZZARE
 \sommario
-Abstract della tesi
+Questa tesi si pone l'ambizioso obiettivo di poter \textbf{automatizzare le procedure di triage} nei pronto soccorso italiani ed esteri, tramite la creazione di un assistente vocale con cui i pazienti possano interagire per risolvere le proprie necessità mediche. Il COVID19 ha reso necessarie procedure di contenimento sempre più stringenti, che difficilmente verranno abbandonate in futuro. Per questo, \textbf{ridurre l'interazione} tra il personale sanitario ed i pazienti potrebbe essere un grande passo in avanti per la sicurezza di tutti. Con triage, termine nato in ambito di emergenze mediche oggi utilizzato anche negli ospedali, si intende la classificazione dei pazienti in base all'\textbf{urgenza delle loro patologie} ed alla \textbf{probabilità di sopravvivenza} che hanno. Questa procedura è oggi svolta da infermieri, ma potrebbe in parte essere affidata ad un computer. Spesso, però, gli utilizzatori dei servizi medici \textbf{non sanno utilizzarne uno}: la necessità di un'interazione più semplice è palese. Per questo, un assistente vocale potrebbe risolvere questa problematica: l'interazione vocale è semplice e chiara per tutti.\\
+Per lo sviluppo di questo strumento si è fatto uso del software \textbf{Mycroft}, un assistente vocale open source, con skills modulari espandibili tramite Python. Sono state definite due nuove skills, che ascoltano il paziente e svolgono la procedura di classificazione: cercano di comprendere a quale \textbf{macrocategoria} appartengono i sintomi, domandano al paziente informazioni riguardo a \textbf{come si sente}, come \textit{dolore}, \textit{febbre}, \textit{capacità di camminare}, ed infine approfondiscono l'\textbf{anagrafica}, con nome, età\dots\\
+Vista la difficoltà del periodo, si è configurata la necessità di effettuare \textbf{diagnostica alla ricerca di sintomi del COVID19}. Per questo, quando il paziente lamenta patologie compatibili con il suddetto, viene attivata un'automazione che tenta di capire, con una determinata accuratezza, quanto il paziente potrebbe esserne affetto.\\
+Infine, i pazienti potrebbero anche desiderare \textbf{informazioni di carattere medico}, senza doversi per forza far ricoverare: è stata quindi implementata la possibilità di consultare le informazioni disponibili sull'Enciclopedia Medica del Ministero della Salute. Per ottenere le suddette, è stato creato uno \textbf{scraper} che consulta il sito e le salva o invia tramite un'API REST.\\
+Questo insieme di strumenti ha \textbf{necessità hardware} molto permissive: è possibile installarlo su un Raspberry Pi, su un vecchio computer o anche su un dispositivo Android. Questo rende possibile l'upgrade a strumentazioni simili anche per le realtà più in difficoltà, anche fuori dall'Italia.\\
+L'installazione di un bot simile a questo negli ospedali ne migliorerebbe la sicurezza, l'efficienza, i costi e la possibilità di salvare vite.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % INDICI - ELIMINARE GLI INDICI NON NECESSARI
